force-app/main/default/objects/Destination__c/fields/Trekking_Event__c.field-meta.xml
<CustomField>
    <fullName>Trekking_Event__c</fullName>
    <label>Trekking Event</label>
    <referenceTo>Trekking_Event__c</referenceTo>
    <relationshipLabel>Destinations</relationshipLabel>
    <relationshipName>Destinations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>