force-app/main/default/objects/Destination__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beach</fullName>
            </value>
            <value>
                <fullName>Fort</fullName>
            </value>
            <value>
                <fullName>Ghats</fullName>
            </value>
            <value>
                <fullName>Jungle Trail</fullName>
            </value>
            <value>
                <fullName>Peak</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
            <value>
                <fullName>Valley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>