force-app/main/default/objects/Destination__c/fields/Visiting_Date__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Date__c</fullName>
    <label>Visiting Date</label>
    <type>DateTime</type>
</CustomField>